@@ -20,6 +20,7 @@ public class LGColors {
     public static final Color Y_EQUALS_NEGATIVE_X = new Color( 0, 178, 178 );
     public static final Color SLOPE = new Color( 120, 245, 3 );
     public static final Color INTERCEPT = Color.YELLOW;
+    public static final Color POINT_X1_Y1 = Color.BLUE;
     public static final Color SAVE_LINE_BUTTON = Color.WHITE;
     public static final Color ERASE_LINES_BUTTON = Color.WHITE;
     public static final Color RESET_ALL_BUTTON = Color.WHITE;
