@@ -2,6 +2,7 @@
 package edu.colorado.phet.linegraphing.pointslope.view;
 
 import java.awt.Color;
+import java.awt.geom.Rectangle2D;
 
 import edu.colorado.phet.common.phetcommon.model.Resettable;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
@@ -13,6 +14,7 @@ import edu.colorado.phet.linegraphing.common.view.LGCanvas;
 import edu.colorado.phet.linegraphing.common.view.PointToolNode;
 import edu.colorado.phet.linegraphing.pointslope.model.PointSlopeModel;
 import edu.umd.cs.piccolo.PNode;
+import edu.umd.cs.piccolo.nodes.PPath;
 
 //TODO lots of duplication with SlopeInterceptCanvas
 
@@ -31,14 +33,13 @@ public class PointSlopeCanvas extends LGCanvas {
     public PointSlopeCanvas( final PointSlopeModel model ) {
 
         //TODO create PointSlopeLineGraphNode
-        PNode graphNode = new PNode();
-//        graphNode = new LineGraphNode( model.graph, model.mvt, model.interactiveLine, model.savedLines, model.standardLines,
-//                                       model.riseRange, model.runRange, model.interceptRange,
-//                                       interactiveEquationVisible, linesVisible, interactiveLineVisible, slopeVisible );
+        PNode graphNode = new PointSlopeGraphNode( model.graph, model.mvt, model.interactiveLine, model.savedLines, model.standardLines,
+                                                   model.riseRange, model.runRange, model.x1Range, model.y1Range,
+                                                   interactiveEquationVisible, linesVisible, interactiveLineVisible, slopeVisible );
         PNode pointTool1 = new PointToolNode( model.pointTool1, model.mvt, model.graph, getStageBounds(), linesVisible );
         PNode pointTool2 = new PointToolNode( model.pointTool2, model.mvt, model.graph, getStageBounds(), linesVisible );
         //TODO create PointSlopeEquationControls
-        PNode equationControls = new PNode();
+        PNode equationControls = new PPath( new Rectangle2D.Double( 0, 0, 300, 200 ) );
 //        SlopeInterceptEquationControls equationControls = new SlopeInterceptEquationControls( interactiveEquationVisible, model.interactiveLine,
 //                                                                                              model.riseRange, model.runRange, model.interceptRange,
 //                                                                                              model.savedLines, linesVisible );
