@@ -1,5 +1,5 @@
 // Copyright 2002-2012, University of Colorado
-package edu.colorado.phet.linegraphing.slopeintercept.view;
+package edu.colorado.phet.linegraphing.pointslope.view;
 
 import java.awt.geom.Point2D;
 
@@ -14,31 +14,31 @@ import edu.colorado.phet.linegraphing.common.LGSimSharing.UserComponents;
 import edu.colorado.phet.linegraphing.common.model.Graph;
 import edu.colorado.phet.linegraphing.common.model.StraightLine;
 import edu.colorado.phet.linegraphing.common.view.LineGraphNode;
+import edu.colorado.phet.linegraphing.common.view.LineManipulatorDragHandler.SlopeDragHandler;
 import edu.colorado.phet.linegraphing.common.view.LineManipulatorNode;
 import edu.colorado.phet.linegraphing.common.view.StraightLineNode;
-import edu.colorado.phet.linegraphing.common.view.LineManipulatorDragHandler.InterceptDragHandler;
-import edu.colorado.phet.linegraphing.common.view.LineManipulatorDragHandler.SlopeDragHandler;
 
 /**
- * Graph that provides direct manipulation of a line in slope-intercept form.
+ * Graph that provides direct manipulation of a line in point-slope form.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-public class SlopeInterceptGraphNode extends LineGraphNode {
+public class PointSlopeGraphNode extends LineGraphNode {
 
-    private final LineManipulatorNode slopeManipulatorNode, interceptManipulatorNode;
+    private final LineManipulatorNode pointManipulator, slopeManipulatorNode;
 
-    public SlopeInterceptGraphNode( final Graph graph, final ModelViewTransform mvt,
-                                    Property<StraightLine> interactiveLine,
-                                    ObservableList<StraightLine> savedLines,
-                                    ObservableList<StraightLine> standardLines,
-                                    Property<DoubleRange> riseRange,
-                                    Property<DoubleRange> runRange,
-                                    Property<DoubleRange> interceptRange,
-                                    Property<Boolean> interactiveEquationVisible,
-                                    Property<Boolean> linesVisible,
-                                    Property<Boolean> interactiveLineVisible,
-                                    Property<Boolean> slopeVisible ) {
+    public PointSlopeGraphNode( final Graph graph, final ModelViewTransform mvt,
+                                Property<StraightLine> interactiveLine,
+                                ObservableList<StraightLine> savedLines,
+                                ObservableList<StraightLine> standardLines,
+                                Property<DoubleRange> riseRange,
+                                Property<DoubleRange> runRange,
+                                Property<DoubleRange> x1Range,
+                                Property<DoubleRange> y1Range,
+                                Property<Boolean> interactiveEquationVisible,
+                                Property<Boolean> linesVisible,
+                                Property<Boolean> interactiveLineVisible,
+                                Property<Boolean> slopeVisible ) {
         super( graph, mvt, interactiveLine, savedLines, standardLines, interactiveEquationVisible, linesVisible, interactiveLineVisible, slopeVisible );
 
         // Manipulators for the interactive line
@@ -49,50 +49,42 @@ public class SlopeInterceptGraphNode extends LineGraphNode {
         slopeManipulatorNode.addInputEventListener( new CursorHandler() );
         slopeManipulatorNode.addInputEventListener( new SlopeDragHandler( UserComponents.slopeManipulator, UserComponentTypes.sprite,
                                                                           slopeManipulatorNode, mvt, interactiveLine, riseRange, runRange ) );
-        // interactivity for intercept manipulator
-        interceptManipulatorNode = new LineManipulatorNode( manipulatorDiameter, LGColors.INTERCEPT );
-        interceptManipulatorNode.addInputEventListener( new CursorHandler() );
-        interceptManipulatorNode.addInputEventListener( new InterceptDragHandler( UserComponents.interceptManipulator, UserComponentTypes.sprite,
-                                                                                  interceptManipulatorNode, mvt, interactiveLine, interceptRange ) );
+        // interactivity for point manipulator
+        pointManipulator = new LineManipulatorNode( manipulatorDiameter, LGColors.POINT_X1_Y1 );
+        pointManipulator.addInputEventListener( new CursorHandler() );
+        //TODO create PointX1Y1DragHandler
+//        pointManipulator.addInputEventListener( new InterceptDragHandler( UserComponents.interceptManipulator, UserComponentTypes.sprite,
+//                                                                                  interceptManipulatorNode, mvt, interactiveLine, interceptRange ) );
 
-        addChild( interceptManipulatorNode );
+        addChild( pointManipulator );
         addChild( slopeManipulatorNode ); // add slope after intercept, so that slope can be changed when x=0
+
+        updateInteractiveLine( interactiveLine.get(), graph, mvt ); //TODO delete this after pointManipulator drag handler is working
     }
 
     // Hides the manipulators at appropriate times (when dragging or based on visibility of lines).
     @Override protected void updateLinesVisibility( boolean linesVisible, boolean interactiveLineVisible, boolean slopeVisible ) {
         super.updateLinesVisibility( linesVisible, interactiveLineVisible, slopeVisible );
-        if ( slopeManipulatorNode != null && interceptManipulatorNode != null ) {
+        if ( slopeManipulatorNode != null && pointManipulator != null ) {
             slopeManipulatorNode.setVisible( linesVisible && interactiveLineVisible );
-            interceptManipulatorNode.setVisible( linesVisible && interactiveLineVisible );
+            pointManipulator.setVisible( linesVisible && interactiveLineVisible );
         }
     }
 
     // Updates the positions of the manipulators
     @Override protected void updateInteractiveLine( final StraightLine line, final Graph graph, final ModelViewTransform mvt ) {
         super.updateInteractiveLine( line, graph, mvt );
-        if ( slopeManipulatorNode != null && interceptManipulatorNode != null ) {
+        if ( slopeManipulatorNode != null && pointManipulator != null ) {
             // move the manipulators
-            final double y = line.rise + line.yIntercept;
-            double x;
-            if ( line.run == 0 ) {
-                x = 0;
-            }
-            else if ( line.rise == 0 ) {
-                x = line.run;
-            }
-            else {
-                x = line.solveX( y );
-            }
-            slopeManipulatorNode.setOffset( mvt.modelToView( new Point2D.Double( x, y ) ) );
-            interceptManipulatorNode.setOffset( mvt.modelToView( new Point2D.Double( 0, line.yIntercept ) ) );
+            slopeManipulatorNode.setOffset( mvt.modelToView( new Point2D.Double( line.x1 + line.run, line.x1 + line.rise ) ) );
+            pointManipulator.setOffset( mvt.modelToView( new Point2D.Double( line.x1, line.y1 ) ) );
         }
     }
 
     // True if either manipulator is in use.
     protected boolean isInteracting() {
-        if ( slopeManipulatorNode != null && interceptManipulatorNode != null ) {
-            return slopeManipulatorNode.isDragging() || interceptManipulatorNode.isDragging();
+        if ( slopeManipulatorNode != null && pointManipulator != null ) {
+            return slopeManipulatorNode.isDragging() || pointManipulator.isDragging();
         }
         else {
             return false;
@@ -101,6 +93,6 @@ public class SlopeInterceptGraphNode extends LineGraphNode {
 
     // Creates a node that displays the line in slope-intercept form.
     protected StraightLineNode createLineNode( StraightLine line, Graph graph, ModelViewTransform mvt ) {
-       return new SlopeInterceptLineNode( line, graph, mvt );
+       return new PointSlopeLineNode( line, graph, mvt );
     }
 }
