@@ -1,5 +1,5 @@
 // Copyright 2002-2012, University of Colorado
-package edu.colorado.phet.linegraphing.slopeintercept.view;
+package edu.colorado.phet.linegraphing.pointslope.view;
 
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
@@ -9,17 +9,17 @@ import edu.colorado.phet.linegraphing.common.view.EquationNode;
 import edu.colorado.phet.linegraphing.common.view.StraightLineNode;
 
 /**
- * Visual representation of a line in slope-intercept form (y = mx + b).
+ * Visual representation of a line in point-slope form.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
-class SlopeInterceptLineNode extends StraightLineNode {
+class PointSlopeLineNode extends StraightLineNode {
 
-    public SlopeInterceptLineNode( final StraightLine line, Graph graph, ModelViewTransform mvt ) {
+    public PointSlopeLineNode( final StraightLine line, Graph graph, ModelViewTransform mvt ) {
         super( line, graph, mvt );
     }
 
     protected EquationNode createEquationNode( StraightLine line, PhetFont font ) {
-        return new SlopeInterceptEquationFactory().createNode( line, font );
+        return new PointSlopeEquationFactory().createNode( line, font );
     }
 }
